--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -28,16 +28,16 @@ Need help? Ask in our [http://groups.google.com/group/spockframework forums].
 
  * Download and extract Groovy 1.6.x binary release ([http://groovy.codehaus.org/Download download page])
  * Download junit-4.4.jar or higher ([http://sourceforge.net/project/showfiles.php?group_id=15278&package_id=12472 download page]) 
- * Download spock-0.1.jar or higher ([http://code.google.com/p/spock/downloads/list download page])
+ * Download spock-core-0.1.jar or higher ([http://code.google.com/p/spock/downloads/list download page])
  * Create a new IDEA project named !HelloSpock and add a Java module.
  * Add a Groovy facet and point the "Groovy SDK" to your Groovy folder
- * In "Module settings", add a "Single-Entry Module Library" for junit-4.4.jar, and another one for spock-0.1.jar
+ * In "Module settings", add a "Single-Entry Module Library" for junit-4.4.jar, and another one for spock-core-0.1.jar
  * In the src folder, create a Groovy class named !HelloSpock with the following content: [HelloSpock HelloSpock.groovy]
- * In the "Project" window, right-click on !HelloSpock and select "Run"
+ * In the "Project" window, right-click on !HelloSpock and select "Run" ([http://svn.spockframework.org/wiki/GettingStartedIdea.png screenshot])
 
 Need help? Ask in our [http://groups.google.com/group/spockframework forums].
 
-[http://svn.spockframework.org/wiki/GettingStartedIdea.png]
+
 
 = Gradle =
 
