--- a/wiki/WhySpock.wiki
+++ b/wiki/WhySpock.wiki
@@ -17,7 +17,7 @@
     3   1  3  |  2
               false
     }}}
-  # *Designed for you*
+  # *Designed for use*
     We always start from a user's perspective, without worrying about implementation details. Everything else follows from that.
   # *Open-minded*
     Test-first? Test-last? Unit-level? Integration-level? Test-driven? Behavior-driven? We believe there are many ways to create good software, and try to give you the flexibility to do it your way.
