--- a/wiki/Interactions.wiki
+++ b/wiki/Interactions.wiki
@@ -1,3 +1,3 @@
-#Learn how to specify interactions between your objects.
+#summary Learn how to specify interactions between your objects.
 
 = Coming to you at the speed of light... =
